2009-12-06  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Adapt download URI template for SourceForge's new FRS structure.

	* x86-mingw32-build.sh.conf (DOWNLOAD_HOST): Set to permalink base
	address, whence qualified mirror download URIs may be generated.
	(DOWNLOAD_OPTIONS): New parameter; initialise it.

	* x86-mingw32-build.sh.mirrors (DOWNLOAD_OPTIONS): Assign user
	specified choice of download mirror host.

	* x86-mingw32-build.sh (DOWNLOAD_OPTIONS): Use it.

2009-12-03  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update to accommodate new package releases.

	* .cvsignore (tmp): Add local working directory name.

	* x86-mingw32-build.sh.conf: Update to current releases of...
	(BINUTILS_VERSION, RUNTIME_VERSION, W32API_VERSION): these.

2009-03-16  Keith Marshall  <keithmarshall@users.sourceforge.net>

	x86-mingw32-build version 1.0 (candidate #1) released.

	* All files (r1-0-rc1, r1-0): Tags assigned at `HEAD'.

2009-03-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Defend against apparent success of failed SourceForge download.

	* x86-mingw32-build.sh (manifest, keep): New shell local variables;
	use them to track package directory content, detect false download,
	and remove phantom dowload files.

2009-03-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Prepare version 1.0, release candidate #1.

	* All files: Update copyright notices; include year 2009.

	* x86-mingw32-build.sh.version (PACKAGE_VERSION_MAJOR): Set it to 1.
	(PACKAGE_VERSION_MINOR): Leave unchanged, set to 0.
	(PACKAGE_VERSION_PATCH): Leave as empty string.
	(SNAPSHOT): Reset to empty string.

	* x86-mingw32-build.sh.conf: Use latest available packages:
	(GCC_VERSION): Update to current stable release: 3.4.5-20060117-2.
	(BINUTILS_VERSION): Update to current stable release: 2.19.1.
	(RUNTIME_VERSION): Update to current stable release: 3.15.2.
	(W32API_VERSION): Update to current stable release: 3.13.