@@ -1,7 +1,7 @@
 .ig
 AUTHORS.in for x86-mingw32-build.sh
 
-Copyright (C) 2006, 2009, MinGW Project  <http://www.mingw.org>
+Copyright (C) 2006, 2009, 2010, MinGW Project  <http://www.mingw.org>
 Written by Keith Marshall <keithmarshall@users.sourceforge.net>
 
 x86-mingw32-build is free software; you can redistribute it and/or modify
@@ -50,5 +50,5 @@ the `portmaker' package,
 also written for the Mingw Project,
 by Earnie Boyd <earnie@users.sourceforge.net> and Keith Marshall.
 .LP
-$RCSfile$Revision: 1.1.1.1 $: end of file
+$RCSfile$Revision: 1.2 $: end of file
 .pl 0
