@@ -2,7 +2,7 @@
 README.in for x86-mingw32-build.sh
 $Id$
 
-Copyright (C) 2006, 2009, MinGW Project  <http://www.mingw.org>
+Copyright (C) 2006, 2009, 2010, MinGW Project  <http://www.mingw.org>
 Written by Keith Marshall <keithmarshall@users.sourceforge.net>
 
 x86-mingw32-build is free software; you can redistribute it and/or modify
@@ -175,5 +175,5 @@ please report it by following the procedure described at:\(en
 .QP 4
 http://www.mingw.org/MinGWiki/index.php/ReportBugs
 .LP
-$RCSfile$Revision: 1.1.1.1 $: end of file
+$RCSfile$Revision: 1.2 $: end of file
 .pl 0
