@@ -4,7 +4,7 @@ $Id$
 A collection of trivial `nroff' macros, to assist in formatting
 README files.
 
-Copyright (C) 2006, 2009, MinGW Project  <http://www.mingw.org>
+Copyright (C) 2006, 2009, 2010, MinGW Project  <http://www.mingw.org>
 Written by Keith Marshall <keithmarshall@users.sourceforge.net>
 
 This is free software; you can redistribute it and/or modify it under the
@@ -60,4 +60,4 @@ USA.
 .nr PD 1
 .fi
 ..
-.\" $RCSfile$Revision: 1.1.1.1 $: end of file
+.\" $RCSfile$Revision: 1.2 $: end of file
