@@ -3,7 +3,7 @@
 #
 # Unattended mode setup for x86-mingw32-build.sh cross compiler build.
 #
-# Copyright (C) 2006, 2009, MinGW Project
+# Copyright (C) 2006, 2009, 2010, MinGW Project
 # Written by Keith Marshall <keithmarshall@users.sourceforge.net>
 #
 # This file is a component of the x86-mingw32-build script; it is not
@@ -98,4 +98,4 @@ esac
 . $script.detail > $script.log
 . $script.detail
 
-# $RCSfile$Revision: 1.3 $: end of file
+# $RCSfile$Revision: 1.4 $: end of file
