@@ -50,8 +50,8 @@
 # 4) Package versions, from which the compiler will be built.
 #
      assume GCC_VERSION                   3.4.5-20060117-2
-     assume BINUTILS_VERSION              2.20-1
-     assume RUNTIME_VERSION               3.17
+     assume BINUTILS_VERSION              2.20.1
+     assume RUNTIME_VERSION               3.18
      assume W32API_VERSION                3.14
 #
 # 5) Automatic patching of downloaded packages: if any appropriately
@@ -156,4 +156,4 @@
 #
      option LDFLAGS_FOR_RUNTIME          -s
 #
-# $RCSfile$Revision: 1.8 $: end of file
+# $RCSfile$Revision: 1.9 $: end of file
