@@ -3,7 +3,7 @@
 #
 # Display details of the current cross compiler build configuration.
 #
-# Copyright (C) 2006, 2009, MinGW Project
+# Copyright (C) 2006, 2009, 2010, MinGW Project
 # Written by Keith Marshall <keithmarshall@users.sourceforge.net>
 #
 # This file is a component of the x86-mingw32-build script; it is not
@@ -52,4 +52,4 @@ test -n "`echo $W32API_BASE_OPTIONS`" && { echo "
 $script: w32api specific build options ..."
 for OPTION in $W32API_BASE_OPTIONS; do echo " $OPTION"; done; }
 
-# $RCSfile$Revision: 1.2 $: end of file
+# $RCSfile$Revision: 1.3 $: end of file
