@@ -3,7 +3,7 @@
 #
 # Manage dialogue for interactive execution of x86-mingw32-build script.
 #
-# Copyright (C) 2006, 2009, MinGW Project
+# Copyright (C) 2006, 2009, 2010, MinGW Project
 # Written by Keith Marshall <keithmarshall@users.sourceforge.net>
 #
 # This file is a component of the x86-mingw32-build script; it is not
@@ -409,4 +409,4 @@ ask "
 isyes $REPLY || die 1 "
 $script: build cancelled at user's request
 "
-# $RCSfile$Revision: 1.5 $: end of file
+# $RCSfile$Revision: 1.6 $: end of file
