@@ -3,7 +3,7 @@
 #
 # Define functions used by the mingw32 cross-compiler build script.
 #
-# Copyright (C) 2006, 2009, MinGW Project
+# Copyright (C) 2006, 2009, 2010, MinGW Project
 # Written by Keith Marshall <keithmarshall@users.sourceforge.net>
 #
 # This file is a component of the x86-mingw32-build script; it is not
@@ -461,4 +461,4 @@ die()
   test -n "$2" && echo "$2"; exit ${1-127}
 }
 
-# $RCSfile$Revision: 1.3 $: end of file
+# $RCSfile$Revision: 1.4 $: end of file
